--- a/materialize-src/sass/main.scss
+++ b/materialize-src/sass/main.scss
@@ -1,10 +1,8 @@
 $reset: 0;
-$full-size: 100%;
 $heading-color: #ffffff;
 $link-color: #f0712c;
 $html-font-size: 16px;
-$text-size: 1.1rem;
-$block-height: 20vw;
+$background-content: #ffffff;
 
 * {
   margin: $reset;
@@ -14,116 +12,141 @@ $block-height: 20vw;
 
   html {
     font-size: $html-font-size * 1.5;
-    height: $full-size;
   }
 
   body {
-    height: $full-size;
-  }
-
-  .wrapper-page {
-    height: $full-size;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+    background-image: url(../img/background.png);
   }
 
   .header {
-    background-image: url(../img/header.png);
-    background-size: $full-size;
-    background-repeat: no-repeat;
-    min-height: $block-height * 1.5;
+    min-height: 23vw;
     position: relative;
   }
 
   .headering {
     color: $heading-color;
     position: absolute;
-    bottom: 1.2rem;
-    font-size: $text-size;
-    width: $full-size;
+    top: 12vw;
+    font-size: 1.1rem;
+    width: 100%;
     text-align: center;
     margin: 0;
   }
 
-  .logo {
-    background-image: url(../img/logo.png);
-    background-size: $full-size;
-    background-repeat: no-repeat;
-    min-height: $block-height;
+  .content {
+    min-height: 73vh;
+    border-radius: 345px/60px;
+    background-color: $background-content;
+    overflow: hidden;
+  }
+  .content .image-wrapper {
+
   }
 
-  .video {
-    width: $full-size;
+  .content .image-wrapper img {
+  	width: 100%;
+  }
+
+
+  .logo {
+    background-image: url(../img/logo.png);
+    background-size: 85%;
+    background-position-x: center;
+    background-repeat: no-repeat;
+    min-height: 26vw;
   }
 
   .link-wrapper {
-    min-height: $block-height;
-    position: relative;
+    margin-bottom: 8vw;
   }
 
-  .link-next-page {
-    color: $link-color;
-    position: absolute;
-    bottom: 0.9rem;
-    font-size: $text-size;
-    width: $full-size;
-    text-align: center;
+  .link-wrapper li{
+    min-height: 20vw;
+    position: relative;
+    border-top: 1px solid #a7a9ac;
   }
+
+.link-wrapper .sign-up {
+  color: $link-color;
+  position: absolute;
+  bottom: 4vw;
+  font-size: 1.1rem;
+  width: 100%;
+  text-align: center;
+  //font-weight: bold;
+}
+
+.link-wrapper .sign-in {
+  color: $link-color;
+  position: absolute;
+  bottom: 7vw;
+  font-size: 0.8rem;
+  width: 100%;
+  text-align: center;
+}
 
   .footer {
-    background-image: url(../img/footer.png);
-    background-size: $full-size;
-    background-repeat: no-repeat;
-    min-height: $block-height * 1.5;
+    min-height: 23vw;
   }
 
   @media (min-width: 350px) {
-    .headering, .link-next-page {
-      font-size: 1.3rem;
+    .headering {
+      font-size: 1.4rem;
+    }
+
+    .link-wrapper .sign-up {
+      font-size: 1.35rem;
+    }
+
+    .link-wrapper .sign-in {
+      font-size: .93rem;
     }
   }
 
   @media (min-width: 400px) {
-    .headering, .link-next-page {
-      font-size: 1.6rem;
-    }
-
     .headering {
-      bottom: 1.5rem;
+      font-size: 1.5rem;
     }
   }
 
   @media (min-width: 600px) {
-    .headering, .link-next-page {
+    .headering {
       font-size: 2rem;
     }
 
-    .headering {
-      bottom: 2rem;
+    .link-wrapper .sign-up {
+      font-size: 2.4rem;
+    }
+
+    .link-wrapper .sign-in {
+      font-size: 1.5rem;
     }
   }
 
   @media (min-width: 750px) {
-    .headering, .link-next-page {
-      font-size: 2.5rem;
+    .headering {
+      font-size: 2.6rem;
     }
 
-    .headering {
-      bottom: 2.5rem;
+    .link-wrapper .sign-up {
+      font-size: 2.6rem;
+    }
+
+    .link-wrapper .sign-in {
+      font-size: 1.6rem;
     }
   }
 
   @media (min-width: 900px) {
     .headering {
-      font-size: 4rem;
+      font-size: 3.2rem;
     }
 
-    .link-next-page {
+    .link-wrapper .sign-up {
       font-size: 3rem;
     }
 
-    .headering {
-      bottom: 3rem;
+    .link-wrapper .sign-in {
+      font-size: 1.8rem;
     }
   }
