--- a/materialize-src/sass/main.scss
+++ b/materialize-src/sass/main.scss
@@ -1,7 +1,7 @@
 $reset: 0;
 $heading-color: #ffffff;
 $link-color: #f0712c;
-$html-font-size: 16px;
+$html-font-size: 18px;
 $background-content: #ffffff;
 
 * {
@@ -10,37 +10,33 @@ $background-content: #ffffff;
   box-sizing: border-box;
 }
 
-html {
-  font-size: $html-font-size * 1.5;
-}
+  html {
+    font-size: $html-font-size;
+  }
 
-body {
-  background-image: url(../img/background.png);
-}
+  body {
+    background-image: url(../img/background.png);
+  }
 
-.header {
-  min-height: 22vw;
-  position: relative;
-}
+  .header {
+    min-height: 22vw;
+    position: relative;
+  }
 
-.headering {
-  color: $heading-color;
-  position: absolute;
-  top: 10vw;
-  font-size: 1.1rem;
-  width: 100%;
-  text-align: center;
-  margin: 0;
-}
+  .headering {
+    color: $heading-color;
+    position: absolute;
+    top: 10vw;
+    font-size: 1.4rem;
+    width: 100%;
+    text-align: center;
+    margin: 0;
+  }
 
-.content {
-  min-height: 73vh;
-  border-radius: 345px/50px;
-  background-color: $background-content;
-  overflow: hidden;
-}
-  .content .image-wrapper {
-
+  .content {
+    border-radius: 345px/50px;
+    background-color: $background-content;
+    overflow: hidden;
   }
 
   .content .image-wrapper img {
@@ -69,7 +65,7 @@ body {
   color: $link-color;
   position: absolute;
   bottom: 4vw;
-  font-size: 1.1rem;
+  font-size: 1.45rem;
   width: 100%;
   text-align: center;
 }
@@ -78,7 +74,7 @@ body {
   color: $link-color;
   position: absolute;
   bottom: 7vw;
-  font-size: 0.8rem;
+  font-size: 1.05rem;
   width: 100%;
   text-align: center;
 }
@@ -87,64 +83,41 @@ body {
     min-height: 24vw;
   }
 
-  @media (min-width: 350px) {
-    .headering {
-      font-size: 1.4rem;
-    }
+@media (min-width: 350px) {
+  html {
+    font-size: 21px;
+  }
+}
 
-    .link-wrapper .sign-up {
-      font-size: 1.4rem;
-    }
+@media (min-width: 400px) {
+  html {
+    font-size: 24px;
+  }
+}
 
-    .link-wrapper .sign-in {
-      font-size: .93rem;
-    }
+@media (min-width: 600px) {
+  html {
+    font-size: 28px;
   }
 
-  @media (min-width: 400px) {
-    .headering {
-      font-size: 1.5rem;
-    }
+  .link-wrapper .sign-up {
+    font-size: 1.9rem;
+  }
+}
+
+@media (min-width: 730px) {
+  html {
+    font-size: 38px;
+  }
+}
+
+@media (min-width: 900px) {
+  html {
+    font-size: 56px;
   }
 
-  @media (min-width: 600px) {
-    .headering {
-      font-size: 2rem;
-    }
-
-    .link-wrapper .sign-up {
-      font-size: 2.4rem;
-    }
-
-    .link-wrapper .sign-in {
-      font-size: 1.5rem;
-    }
+  .link-wrapper .sign-up {
+    font-size: 1.9rem;
   }
 
-  @media (min-width: 750px) {
-    .headering {
-      font-size: 2.6rem;
-    }
-
-    .link-wrapper .sign-up {
-      font-size: 2.6rem;
-    }
-
-    .link-wrapper .sign-in {
-      font-size: 1.6rem;
-    }
-  }
-
-  @media (min-width: 900px) {
-    .headering {
-      font-size: 3.2rem;
-    }
-
-    .link-wrapper .sign-up {
-      font-size: 3rem;
-    }
-
-    .link-wrapper .sign-in {
-      font-size: 1.8rem;
-    }
-  }
+}
