--- a/BabyNoggin/css/style.css
+++ b/BabyNoggin/css/style.css
@@ -1,7 +1,18 @@
-* {
+html, body {
   margin: 0;
-  padding: 0;
+  padding: 0; }
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0; }
+
+* {
   box-sizing: border-box; }
+
+.clear-fix:after {
+  content: "";
+  display: table;
+  clear: both; }
 
 html {
   font-size: 18px; }
@@ -22,24 +33,32 @@ img {
   top: 10vw;
   font-size: 1.4rem;
   width: 100%;
-  text-align: center;
-  margin: 0; }
+  text-align: center; }
 
 .header .arrow-back {
   position: absolute;
   top: 11vw;
   left: 7vw; }
 
-.header .arrow-back img {
+.header img {
   width: 6vw; }
+
+.header .menu {
+  position: absolute;
+  top: 11vw;
+  right: 7vw; }
 
 .content {
   border-radius: 345px/50px;
   background-color: #ffffff;
-  overflow: hidden; }
+  overflow: hidden;
+  min-height: 83vh; }
 
 .footer {
   min-height: 14vw; }
+
+.wrapper-landing-page .content {
+  min-height: 75vw; }
 
 .wrapper-landing-page .logo {
   background-image: url(../img/logo.png);
@@ -182,23 +201,23 @@ img {
   background-color: #ffffff;
   color: #f0712c; }
 
-.wrapper-setup-birthdate .content {
-  min-height: 83vh;
-  padding: 20vw 10vw 5vw; }
+.wrapper-setup-birthdate .content,
+.wrapper-due-date .content {
+  padding: 20vw 0 5vw; }
 
 .wrapper-form-heading {
   margin-bottom: 10vw;
-  position: relative; }
+  position: relative;
+  padding: 0 10vw; }
 
 .wrapper-form-heading h3 {
   display: inline-block;
   font-size: 1rem;
-  color: #39b9de;
-  margin: 0; }
+  color: #39b9de; }
 
 .wrapper-form-heading .button {
   position: absolute;
-  right: 0;
+  right: 10vw;
   font-size: 1rem;
   border: none;
   background-color: #ffffff;
@@ -206,8 +225,19 @@ img {
   height: 100%; }
 
 .calendar-wrapper {
+  position: relative;
   min-height: 60vw;
-  margin-bottom: 5vw; }
+  margin-bottom: 5vw;
+  padding: 0 10vw; }
+
+.calendar-wrapper .lines {
+  border-top: solid 1px #cccccc;
+  border-bottom: solid 1px #cccccc;
+  position: absolute;
+  top: 23vw;
+  left: 0;
+  width: 100%;
+  height: 2rem; }
 
 div.inside, div.outside {
   float: left; }
@@ -283,15 +313,544 @@ div.inside, div.outside {
 .wrapper-setup-birthdate .message {
   font-size: 0.9rem;
   text-align: center;
-  padding: 4vw; }
+  padding: 4vw 10vw; }
 
 .wrapper-setup-birthdate .message a {
   color: #f0712c;
   text-decoration: none; }
 
-.wrapper-due-date .content {
-  min-height: 83vh;
-  padding: 20vw 10vw 5vw; }
+.wrapper-profile-page .birthdate-wrapper {
+  position: relative;
+  min-height: 20vw;
+  border-bottom: 1px solid #a7a9ac; }
+
+.wrapper-profile-page .wrapper-tick-icon {
+  position: absolute;
+  top: -9vw;
+  left: 14vw;
+  background-image: url(../img/tick.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  width: 20vw;
+  height: 25vw; }
+
+.wrapper-profile-page .birthdate {
+  position: absolute;
+  top: 2vw;
+  right: 14vw;
+  width: 40vw;
+  color: #585a5b;
+  line-height: 1.2rem; }
+
+.wrapper-profile-page .birthdate span {
+  font-weight: bold; }
+
+.wrapper-profile-page .progress-link {
+  position: relative;
+  min-height: 16.5vw;
+  border-bottom: 1px solid #a7a9ac; }
+
+.wrapper-profile-page .progress-link a {
+  color: #f0712c;
+  position: absolute;
+  bottom: 4vw;
+  font-size: 1.05rem;
+  width: 100%;
+  text-align: center; }
+
+.wrapper-profile-page .milestone-wrapper {
+  position: relative;
+  min-height: 25vw; }
+
+.wrapper-profile-page .milestone-wrapper h5 {
+  text-align: center;
+  font-size: 1rem;
+  color: #585a5b;
+  margin: 4vw 0 1vw; }
+
+.wrapper-profile-page .milestone-wrapper a {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  color: #f0712c;
+  font-size: 1.05rem; }
+
+.wrapper-progress-page .birthdate-wrapper {
+  position: relative;
+  min-height: 20vw;
+  border-bottom: 1px solid #a7a9ac; }
+
+.wrapper-progress-page .wrapper-daisy-icon {
+  position: absolute;
+  top: -20vw;
+  left: 5vw;
+  width: 34vw;
+  height: 34vw;
+  background-image: url(../img/daisy-icon.png);
+  background-repeat: no-repeat;
+  background-size: 100%; }
+
+.wrapper-progress-page .birthdate {
+  position: absolute;
+  top: 2vw;
+  right: 9vw;
+  width: 50vw;
+  color: #585a5b;
+  line-height: 1.2rem;
+  font-size: 0.9rem; }
+
+.wrapper-progress-page .birthdate span {
+  font-weight: bold; }
+
+.wrapper-progress-page .period-time {
+  display: flex;
+  justify-content: space-between;
+  padding: 5vw 5vw 0;
+  font-size: 0.9rem; }
+
+.wrapper-progress-page .period-time span {
+  color: #3ccfd4; }
+
+.wrapper-progress-page .period-time a {
+  color: #585a5b; }
+
+.wrapper-progress-page .period-time .active-link {
+  color: #f0712c; }
+
+.wrapper-progress-page .milestone-heading,
+.wrapper-progress-page .vaccines-heading {
+  position: relative;
+  min-height: 13vw;
+  font-size: 0.9rem; }
+
+.wrapper-progress-page .milestone-heading h3,
+.wrapper-progress-page .vaccines-heading h3 {
+  text-transform: uppercase;
+  display: inline-block;
+  margin: 0;
+  position: absolute;
+  top: 4.5vw;
+  left: 5vw;
+  font-size: 0.9rem; }
+
+.wrapper-progress-page .milestone-heading a,
+.wrapper-progress-page .vaccines-heading a {
+  position: absolute;
+  top: 3.3vw;
+  right: 5vw;
+  color: #f0712c; }
+
+.wrapper-progress-page .milestone-list li,
+.wrapper-progress-page .vaccines-list li {
+  position: relative;
+  min-height: 13vw;
+  padding: 0 5vw; }
+
+.wrapper-progress-page .milestone-list li:nth-child(odd),
+.wrapper-progress-page .vaccines-list li:nth-child(odd) {
+  background-color: #d6ecec; }
+
+.wrapper-progress-page li {
+  background-repeat: no-repeat;
+  background-position-x: 5vw;
+  background-position-y: center;
+  background-size: 5.5%; }
+
+.wrapper-progress-page .crossing-eyes {
+  background-image: url(../img/crossing-eyes-icon.png); }
+
+.wrapper-progress-page .covered-toy {
+  background-image: url(../img/eyes-icon.png); }
+
+.wrapper-progress-page .back-front {
+  background-image: url(../img/message-icon.png); }
+
+.wrapper-progress-page .milestone-list a {
+  position: absolute;
+  top: 3vw;
+  left: 12vw;
+  color: #f0712c;
+  font-size: 0.9rem; }
+
+.wrapper-progress-page .vaccines-list a {
+  position: absolute;
+  top: 3vw;
+  left: 5vw;
+  color: #f0712c;
+  font-size: 0.9rem; }
+
+.wrapper-progress-page .milestone-list span,
+.wrapper-progress-page .vaccines-list span {
+  position: absolute;
+  right: 5vw;
+  font-size: 1.5rem;
+  color: #585a5b; }
+
+.wrapper-progress-page .favorites-heading {
+  position: relative;
+  min-height: 13vw;
+  font-size: 0.9rem; }
+
+.wrapper-progress-page .favorites {
+  border-top: 1px solid #a7a9ac;
+  margin-bottom: 15vw; }
+
+.wrapper-progress-page .favorites-heading h3 {
+  display: inline-block;
+  position: absolute;
+  top: 4.5vw;
+  left: 5vw;
+  font-size: 0.9rem;
+  color: #3ccfd4; }
+
+.wrapper-progress-page .favorites-heading a {
+  position: absolute;
+  top: 3vw;
+  right: 5vw;
+  color: #f0712c; }
+
+.wrapper-progress-page .favorites-list a {
+  padding: 0 5vw;
+  color: #f0712c;
+  font-size: 0.9rem; }
+
+.wrapper-our-status .icon-status {
+  height: 40vw;
+  background-repeat: no-repeat;
+  background-size: 35%;
+  background-position-x: center;
+  background-position-y: bottom; }
+
+.status-great .icon-status {
+  background-image: url(../img/great-daisy.png); }
+
+.status-seek .icon-status {
+  background-image: url(../img/seek-daisy.png); }
+
+.status-test .icon-status {
+  background-image: url(../img/tests-daisy.png); }
+
+.status-great .description {
+  padding: 5vw 6vw; }
+
+.status-test .description, .status-seek .description {
+  padding: 5vw 8vw; }
+
+.wrapper-our-status .description h2 {
+  font-size: 1rem;
+  text-align: center;
+  color: #159fc0;
+  margin-bottom: 4vw; }
+
+.wrapper-our-status .description p {
+  text-align: center;
+  color: #585a5b; }
+
+.status-great .description p,
+.status-test .description p {
+  margin-bottom: 12vw; }
+
+.status-seek .description p {
+  margin-bottom: 4vw; }
+
+.wrapper-our-status .description span {
+  font-weight: bold; }
+
+.wrapper-our-status .description a {
+  color: #f0712c; }
+
+.status-great .wrapper-link,
+.status-test .wrapper-link {
+  position: relative;
+  min-height: 10vw;
+  margin-bottom: 10vw; }
+
+.status-great .wrapper-link a,
+.status-test .wrapper-link a {
+  position: absolute;
+  color: #f0712c;
+  text-align: center;
+  width: 100%; }
+
+.wrapper-tracker-1 .description {
+  color: #585a5b;
+  padding: 0 5vw;
+  margin-bottom: 3vw;
+  font-size: 0.9rem;
+  text-align: center; }
+
+.wrapper-tracker-1 .list-tracking {
+  margin-bottom: 8vw; }
+
+.wrapper-tracker-1 .list-tracking li {
+  position: relative;
+  min-height: 15vw;
+  padding: 0 5vw;
+  background-repeat: no-repeat;
+  background-position-x: 15vw;
+  background-position-y: center;
+  background-size: 6.5%;
+  border-bottom: 1px solid #a7a9ac; }
+
+.wrapper-tracker-1 .list-tracking li:last-child {
+  border-bottom: none; }
+
+.wrapper-tracker-1 .list-tracking .keep-track {
+  background-image: url(../img/crossing-eyes-icon.png); }
+
+.wrapper-tracker-1 .list-tracking .record-sleep {
+  background-image: url(../img/eyes-icon.png); }
+
+.wrapper-tracker-1 .list-tracking .vacciness {
+  background-image: url(../img/message-icon.png); }
+
+.wrapper-tracker-1 .list-tracking .diary {
+  background-image: url(../img/message-icon.png); }
+
+.wrapper-tracker-1 .list-tracking a {
+  position: absolute;
+  top: 3.2vw;
+  left: 25vw;
+  color: #f0712c;
+  font-size: 1rem; }
+
+.tracker .content {
+  padding: 5vw 0; }
+
+.tracker .list-menu {
+  padding: 0 5vw; }
+
+.tracker .list-menu ul {
+  border: 1px solid #a7a9ac;
+  border-radius: 5px;
+  overflow: hidden; }
+
+.tracker .list-menu li {
+  float: left;
+  padding: 0.5vw 4.2vw;
+  border-right: 1px solid #a7a9ac; }
+
+.tracker .list-menu li:last-child {
+  border: none; }
+
+.tracker .list-menu .active-link {
+  background-color: #39b9de; }
+
+.tracker .list-menu a {
+  font-size: 0.85rem;
+  color: #f0712c; }
+
+.tracker .list-menu .active-link a {
+  color: #ffffff; }
+
+.wrapper-tracker-2 .change-date {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 5vw; }
+
+.wrapper-tracker-2 .prev,
+.wrapper-tracker-2 .next {
+  width: 12vw; }
+
+.wrapper-tracker-2 .prev a {
+  color: #f0712c;
+  font-size: 0.9rem; }
+
+.wrapper-tracker-2 .prev a:before {
+  content: "";
+  background-image: url(../img/prev-arrow.png);
+  background-repeat: no-repeat;
+  background-size: 85%;
+  height: 8vw;
+  float: left;
+  position: relative;
+  top: 8px;
+  display: inline-block;
+  width: 4vw; }
+
+.wrapper-tracker-2 .next a {
+  color: #585a5b;
+  font-size: 0.9rem; }
+
+.wrapper-tracker-2 .next a:after {
+  content: "";
+  background-image: url(../img/next-arrow.png);
+  background-repeat: no-repeat;
+  background-size: 85%;
+  height: 8vw;
+  float: right;
+  position: relative;
+  top: 8px;
+  display: inline-block;
+  width: 4vw; }
+
+.wrapper-tracker-2 .current-date h3 {
+  font-size: 1rem;
+  position: relative;
+  top: 1vw; }
+
+.wrapper-tracker-2 .add-notes {
+  width: 8vw;
+  height: 8vw;
+  background-image: url(../img/plus.png);
+  background-size: 100%;
+  background-repeat: no-repeat; }
+
+.wrapper-tracker-2 .list-notes {
+  padding: 0 5vw; }
+
+.wrapper-tracker-2 .list-notes li {
+  padding: 2vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #585a5b; }
+
+.wrapper-tracker-2 .list-notes li:nth-child(odd) {
+  background-color: #D2D8D8; }
+
+.wrapper-tracker-2 .list-notes li:first-child {
+  background-color: #d6ecec; }
+
+.wrapper-tracker-2 .list-notes span:last-child {
+  font-size: 0.8rem; }
+
+.tracker .wrapper-menu-form {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8vw;
+  padding: 0 5vw; }
+
+.tracker .wrapper-menu-form a {
+  color: #f0712c; }
+
+.tracker .button {
+  border: none;
+  background-color: #ffffff;
+  color: #f0712c;
+  padding: 0; }
+
+.tracker h2 {
+  font-size: 1.2rem;
+  text-align: center;
+  color: #159fc0;
+  margin-bottom: 4vw; }
+
+.tracker .wrapper-select {
+  min-height: 60vw;
+  margin-bottom: 5vw;
+  position: relative; }
+
+.tracker .lines {
+  border-top: solid 1px #cccccc;
+  border-bottom: solid 1px #cccccc;
+  position: absolute;
+  top: 23vw;
+  left: 0;
+  width: 100%;
+  height: 2rem; }
+
+.tracker .choose-time {
+  position: relative;
+  min-height: 60vw;
+  margin-bottom: 5vw;
+  display: flex;
+  justify-content: center; }
+
+#drum_method {
+  width: 100%;
+  height: 11rem; }
+
+#drum_method .inner {
+  top: 1rem;
+  height: 8.7rem; }
+
+#drum_method .container, #drum_method figure {
+  height: 2.1rem; }
+
+#drum_method .container {
+  top: 3.4rem; }
+
+#drum_method figure {
+  text-align: center;
+  font-size: 1.2rem;
+  line-height: 1.4rem; }
+
+#drum_hour {
+  width: 2rem;
+  height: 11rem; }
+
+#drum_hour .inner {
+  top: 1rem;
+  height: 8.7rem; }
+
+#drum_hour .container, #drum_hour figure {
+  height: 2.1rem; }
+
+#drum_hour .container {
+  top: 3.4rem; }
+
+#drum_hour figure {
+  text-align: center;
+  font-size: 1.2rem;
+  line-height: 1.4rem; }
+
+#drum_min {
+  width: 2rem;
+  height: 11rem; }
+
+#drum_min .inner {
+  top: 1rem;
+  height: 8.7rem; }
+
+#drum_min .container, #drum_min figure {
+  height: 2.1rem; }
+
+#drum_min .container {
+  top: 3.4rem; }
+
+#drum_min figure {
+  text-align: center;
+  font-size: 1.2rem;
+  line-height: 1.4rem; }
+
+#drum_time-of-day {
+  width: 3rem;
+  height: 11rem; }
+
+#drum_time-of-day .inner {
+  top: 1rem;
+  height: 8.7rem; }
+
+#drum_time-of-day .container, #drum_time-of-day figure {
+  height: 2.1rem; }
+
+#drum_time-of-day .container {
+  top: 3.4rem; }
+
+#drum_time-of-day figure {
+  text-align: center;
+  font-size: 1.2rem;
+  line-height: 1.4rem; }
+
+#drum_sleep {
+  width: 100%;
+  height: 11rem; }
+
+#drum_sleep .inner {
+  top: 1rem;
+  height: 8.7rem; }
+
+#drum_sleep .container, #drum_sleep figure {
+  height: 2.1rem; }
+
+#drum_sleep .container {
+  top: 3.4rem; }
+
+#drum_sleep figure {
+  text-align: center;
+  font-size: 1.2rem;
+  line-height: 1.4rem; }
 
 @media (min-width: 350px) {
   html {
@@ -300,7 +859,10 @@ div.inside, div.outside {
   .wrapper-setup-page [type="radio"] + label:before,
   .wrapper-setup-page [type="radio"] + label:after {
     width: 2.4rem;
-    height: 1.2rem; } }
+    height: 1.2rem; }
+
+  .wrapper-tracker-1 .list-tracking li {
+    background-size: 6.5%; } }
 @media (min-width: 400px) and (max-width: 599px) {
   html {
     font-size: 24px; }
@@ -318,18 +880,87 @@ div.inside, div.outside {
   .wrapper-setup-page [type="radio"] + label:before,
   .wrapper-setup-page [type="radio"] + label:after {
     width: 2.5rem;
-    height: 1.3rem; } }
-@media (min-width: 600px) and (max-width: 729px) {
+    height: 1.3rem; }
+
+  .calendar-wrapper .lines,
+  .tracker .lines {
+    top: 23.5vw; }
+
+  .wrapper-progress-page .milestone-list a,
+  .wrapper-progress-page .vaccines-list a {
+    top: 2.6vw; } }
+@media (min-width: 400px) and (max-width: 489px) and (orientation: landscape) {
+  .wrapper-profile-page .tick {
+    font-size: 3rem;
+    padding-left: 2.2vw;
+    line-height: 3.5rem; }
+
+  .tracker .list-menu li {
+    padding: 0.5vw 5.2vw; }
+
+  .calendar-wrapper .lines,
+  .tracker .lines {
+    top: 20.5vw; } }
+@media (min-width: 490px) and (orientation: landscape) {
   html {
     font-size: 28px; }
 
+  .wrapper-setup-page [type="radio"] + label:before,
+  .wrapper-setup-page [type="radio"] + label:after {
+    height: 1.1rem; }
+
+  .wrapper-profile-page .tick {
+    font-size: 3rem;
+    padding-left: 2.2vw;
+    line-height: 3.5rem; }
+
+  .calendar-wrapper .lines,
+  .tracker .lines {
+    top: 20vw; }
+
+  .wrapper-progress-page li {
+    background-size: 4.5%; }
+
+  .wrapper-progress-page .milestone-list a,
+  .wrapper-progress-page .vaccines-list a {
+    top: 3.7vw; }
+
+  .wrapper-progress-page .milestone-list span,
+  .wrapper-progress-page .vaccines-list span {
+    top: 0.7vw; }
+
+  .wrapper-tracker-1 .list-tracking a {
+    top: 3.6vw;
+    font-size: 1.1rem; }
+
+  .tracker .list-menu li {
+    padding: 0.5vw 5.2vw; } }
+@media (min-width: 600px) and (max-width: 729px) {
+  html {
+    font-size: 32px; }
+
   .wrapper-setup-page .input-field [type="radio"]:not(:checked) + label,
   .wrapper-setup-page .input-field [type="radio"]:checked + label {
-    padding: 0.1rem 0.66rem 0 0.65rem; }
+    padding: 0.2rem 0.66rem 0 0.55rem; }
 
   .wrapper-setup-page [type="radio"] + label:before,
   .wrapper-setup-page [type="radio"] + label:after {
-    height: 1.1rem; } }
+    height: 1.1rem; }
+
+  .wrapper-profile-page .wrapper-tick-icon {
+    padding: 1.5vw; }
+
+  .wrapper-profile-page .tick {
+    font-size: 2.7rem;
+    padding-left: 3vw;
+    line-height: 3.5rem; }
+
+  .wrapper-tracker-1 .list-tracking a {
+    top: 3.5vw;
+    font-size: 1.1rem; }
+
+  .tracker .list-menu li {
+    padding: 0.5vw 5.2vw; } }
 @media (min-width: 730px) {
   html {
     font-size: 38px; }
@@ -348,10 +979,49 @@ div.inside, div.outside {
 
   .wrapper-setup-page [type="checkbox"].filled-in:checked + label:before {
     width: 0.3rem;
-    height: 0.5rem; } }
+    height: 0.5rem; }
+
+  .calendar-wrapper .lines,
+  .tracker .lines {
+    top: 20vw; }
+
+  .wrapper-profile-page .wrapper-tick-icon {
+    padding: 1.5vw; }
+
+  .wrapper-profile-page .tick {
+    font-size: 2.7rem;
+    padding-left: 3vw;
+    line-height: 3.5rem; }
+
+  .wrapper-progress-page li {
+    background-size: 4.5%; }
+
+  .wrapper-progress-page .milestone-list a,
+  .wrapper-progress-page .vaccines-list a {
+    top: 3.3vw; }
+
+  .wrapper-progress-page .milestone-list span,
+  .wrapper-progress-page .vaccines-list span {
+    top: 0.5vw; }
+
+  .wrapper-tracker-1 .list-tracking a {
+    top: 3.6vw; }
+
+  .tracker .list-menu li {
+    padding: 0.5vw 5.1vw; }
+
+  .tracker .list-menu ul {
+    border-radius: 8px; } }
+@media (min-width: 730px) and (max-width: 899px) and (orientation: landscape) {
+  .calendar-wrapper .lines,
+  .tracker .lines {
+    top: 21vw; } }
 @media (min-width: 900px) {
   .header .headering {
     font-size: 1.6rem; }
+
+  .wrapper-setup-birthdate .exclamation-mark {
+    height: 4rem; }
 
   .calendar-wrapper {
     min-height: 55vw;
@@ -363,7 +1033,28 @@ div.inside, div.outside {
   #drum_day {
     width: 7rem; }
 
+  .calendar-wrapper .lines,
+  .tracker .lines {
+    top: 15vw; }
+
   .wrapper-landing-page .link-wrapper .sign-up {
-    font-size: 1.9rem; } }
+    font-size: 1.9rem; }
+
+  .wrapper-profile-page .tick {
+    font-size: 4rem;
+    padding-left: 2.5vw;
+    line-height: 4.5rem; }
+
+  .wrapper-progress-page .milestone-list a,
+  .wrapper-progress-page .vaccines-list a {
+    top: 3vw; }
+
+  .wrapper-tracker-1 .list-tracking li {
+    min-height: 13vw;
+    background-position-x: 15vw;
+    background-size: 4.5%; }
+
+  .tracker .list-menu li {
+    padding: 0.5vw 6.7vw; } }
 
 /*# sourceMappingURL=style.css.map */
