Change wrapper setup.html

--- a/BabyNoggin/css/style.css
+++ b/BabyNoggin/css/style.css
@@ -6,16 +6,13 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0; }
 
-* {
-  box-sizing: border-box; }
+html {
+  font-size: 18px; }
 
-.clear-fix:after {
+.page-wrapper .clear-fix:after {
   content: "";
   display: table;
   clear: both; }
-
-html {
-  font-size: 18px; }
 
 .page-wrapper {
   background-image: url(../img/background.png); }
@@ -94,109 +91,109 @@ html {
 #landing-page .footer {
   min-height: 24vw; }
 
-.wrapper-setup-page input:not([type]),
-.wrapper-setup-page input[type=text],
-.wrapper-setup-page input[type=password],
-.wrapper-setup-page input[type=email] {
+#setup-page input:not([type]),
+#setup-page input[type=text],
+#setup-page input[type=password],
+#setup-page input[type=email] {
   margin-bottom: 5px; }
 
-.wrapper-setup-page input[type=text]:focus,
-.wrapper-setup-page input[type=password]:focus,
-.wrapper-setup-page input[type=email]:focus {
+#setup-page input[type=text]:focus,
+#setup-page input[type=password]:focus,
+#setup-page input[type=email]:focus {
   border-bottom: 1px solid #fb8c00;
   box-shadow: 0 1px 0 0 #fb8c00; }
 
-.wrapper-setup-page .input-field {
+#setup-page .input-field {
   margin-top: 0; }
 
-.wrapper-setup-page .input-field input {
+#setup-page .input-field input {
   padding-left: 2.5rem; }
 
-.wrapper-setup-page .input-field .name-input {
+#setup-page .input-field .name-input {
   margin-top: 0.8rem; }
 
-.wrapper-setup-page .radio-wrapper {
+#setup-page .radio-wrapper {
   height: 3.3rem;
   padding-left: 1.6rem; }
 
-.wrapper-setup-page [type="radio"] + label:before,
-.wrapper-setup-page [type="radio"] + label:after {
+#setup-page [type="radio"] + label:before,
+#setup-page [type="radio"] + label:after {
   width: 2.5rem;
   height: 1.3rem;
   margin-top: 0; }
 
-.wrapper-setup-page .input-field [type="radio"]:not(:checked) + label,
-.wrapper-setup-page .input-field [type="radio"]:checked + label {
+#setup-page .input-field [type="radio"]:not(:checked) + label,
+#setup-page .input-field [type="radio"]:checked + label {
   padding: 0 0.66rem 0 0.65rem;
   font-size: 0.8rem;
   text-transform: uppercase;
   margin-right: 0.8rem; }
 
-.wrapper-setup-page .wrapper-form [type="radio"]:not(:checked) + label:before {
+#setup-page .wrapper-form [type="radio"]:not(:checked) + label:before {
   border-radius: 0%;
   border: 1px solid #a7a9ac; }
 
-.wrapper-setup-page [type="radio"]:checked + label:after {
+#setup-page [type="radio"]:checked + label:after {
   border-radius: 0%;
   border: 1px solid #39b9de;
   background-color: #39b9de;
   z-index: -1;
   transform: scale(1.02); }
 
-.wrapper-setup-page [type="radio"]:checked + label {
+#setup-page [type="radio"]:checked + label {
   color: #ffffff;
   z-index: 1; }
 
-.wrapper-setup-page .add-border {
+#setup-page .add-border {
   border-bottom: 1px solid #a7a9ac;
   margin-top: 0; }
 
-.wrapper-setup-page input[type=email] {
+#setup-page input[type=email] {
   height: 2.8rem; }
 
-.wrapper-setup-page .input-field .input-password {
+#setup-page .input-field .input-password {
   border: none;
   margin-bottom: -0.5rem; }
 
-.wrapper-setup-page input[type=password] {
+#setup-page input[type=password] {
   height: 2.1rem; }
 
-.wrapper-setup-page .input-file-wrapper {
+#setup-page .input-file-wrapper {
   height: 3rem;
   border-bottom: 1px solid #a7a9ac;
   color: #f0712c;
   margin-top: -0.35rem;
   margin-bottom: 0.5rem; }
 
-.wrapper-setup-page .input-file-wrapper > label {
+#setup-page .input-file-wrapper > label {
   color: #f0712c;
   padding-left: 1.8rem; }
 
-.wrapper-setup-page [type="checkbox"].filled-in:checked + label:after {
+#setup-page [type="checkbox"].filled-in:checked + label:after {
   border: 2px solid #39b9de;
   background-color: #39b9de; }
 
-.wrapper-setup-page .wrapper-checkbox {
+#setup-page .wrapper-checkbox {
   padding-left: 2.4rem; }
 
-.wrapper-setup-page .wrapper-checkbox label {
+#setup-page .wrapper-checkbox label {
   font-size: 0.9rem; }
 
-.wrapper-setup-page .link-wrapper {
+#setup-page .link-wrapper {
   padding-left: 2.4rem;
   margin-bottom: 0.5rem; }
 
-.wrapper-setup-page .link-wrapper a {
+#setup-page .link-wrapper a {
   color: #f0712c;
   font-size: 0.8rem; }
 
-.wrapper-setup-page .button-wrapper {
+#setup-page .button-wrapper {
   height: 2.5rem;
   margin-bottom: 1.5rem;
   display: flex;
   justify-content: center; }
 
-.wrapper-setup-page .button-wrapper .button {
+#setup-page .button-wrapper .button {
   border: none;
   background-color: #ffffff;
   color: #f0712c; }
@@ -856,8 +853,8 @@ div.inside, div.outside {
   html {
     font-size: 21px; }
 
-  .wrapper-setup-page [type="radio"] + label:before,
-  .wrapper-setup-page [type="radio"] + label:after {
+  #setup-page [type="radio"] + label:before,
+  #setup-page [type="radio"] + label:after {
     width: 2.4rem;
     height: 1.2rem; }
 
@@ -873,12 +870,12 @@ div.inside, div.outside {
     top: 1rem;
     height: 8.5rem; }
 
-  .wrapper-setup-page .input-field [type="radio"]:not(:checked) + label,
-  .wrapper-setup-page .input-field [type="radio"]:checked + label {
+  #setup-page .input-field [type="radio"]:not(:checked) + label,
+  #setup-page .input-field [type="radio"]:checked + label {
     padding: 0.11rem 0.66rem 0 0.65rem; }
 
-  .wrapper-setup-page [type="radio"] + label:before,
-  .wrapper-setup-page [type="radio"] + label:after {
+  #setup-page [type="radio"] + label:before,
+  #setup-page [type="radio"] + label:after {
     width: 2.5rem;
     height: 1.3rem; }
 
@@ -905,8 +902,8 @@ div.inside, div.outside {
   html {
     font-size: 28px; }
 
-  .wrapper-setup-page [type="radio"] + label:before,
-  .wrapper-setup-page [type="radio"] + label:after {
+  #setup-page [type="radio"] + label:before,
+  #setup-page [type="radio"] + label:after {
     height: 1.1rem; }
 
   .wrapper-profile-page .tick {
@@ -939,12 +936,12 @@ div.inside, div.outside {
   html {
     font-size: 32px; }
 
-  .wrapper-setup-page .input-field [type="radio"]:not(:checked) + label,
-  .wrapper-setup-page .input-field [type="radio"]:checked + label {
+  #setup-page .input-field [type="radio"]:not(:checked) + label,
+  #setup-page .input-field [type="radio"]:checked + label {
     padding: 0.2rem 0.66rem 0 0.55rem; }
 
-  .wrapper-setup-page [type="radio"] + label:before,
-  .wrapper-setup-page [type="radio"] + label:after {
+  #setup-page [type="radio"] + label:before,
+  #setup-page [type="radio"] + label:after {
     height: 1.1rem; }
 
   .wrapper-profile-page .wrapper-tick-icon {
@@ -968,16 +965,16 @@ div.inside, div.outside {
   #drum_month {
     width: 9rem; }
 
-  .wrapper-setup-page .input-field [type="radio"]:not(:checked) + label,
-  .wrapper-setup-page .input-field [type="radio"]:checked + label {
+  #setup-page .input-field [type="radio"]:not(:checked) + label,
+  #setup-page .input-field [type="radio"]:checked + label {
     padding: 0.25rem 0.66rem 0 0.45rem; }
 
-  .wrapper-setup-page [type="checkbox"].filled-in:checked + label:after,
-  .wrapper-setup-page [type="checkbox"].filled-in:not(:checked) + label:after {
+  #setup-page [type="checkbox"].filled-in:checked + label:after,
+  #setup-page [type="checkbox"].filled-in:not(:checked) + label:after {
     width: 0.7rem;
     height: 0.7rem; }
 
-  .wrapper-setup-page [type="checkbox"].filled-in:checked + label:before {
+  #setup-page [type="checkbox"].filled-in:checked + label:before {
     width: 0.3rem;
     height: 0.5rem; }
 
@@ -1020,6 +1017,9 @@ div.inside, div.outside {
   .header .headering {
     font-size: 1.6rem; }
 
+  #landing-page .link-wrapper .sign-up {
+    font-size: 1.9rem; }
+
   .wrapper-setup-birthdate .exclamation-mark {
     height: 4rem; }
 
@@ -1036,9 +1036,6 @@ div.inside, div.outside {
   .calendar-wrapper .lines,
   .tracker .lines {
     top: 15vw; }
-
-  .wrapper-landing-page .link-wrapper .sign-up {
-    font-size: 1.9rem; }
 
   .wrapper-profile-page .tick {
     font-size: 4rem;
