--- a/BabyNoggin/sass/style.scss
+++ b/BabyNoggin/sass/style.scss
@@ -1,6 +1,6 @@
 @import "variables.scss";
 @import "reset";
-@import "helpers";
+@import "mixins";
 
 // general styles
 
@@ -254,30 +254,31 @@ html {
 
 // setup-birthdate page styles and setup-due-date page styles
 
-.wrapper-setup-birthdate .content,
-.wrapper-due-date .content {
+#setup-birthdate .content,
+#setup-due-date .content {
     padding: 20vw 0 5vw;
 }
 
-.wrapper-form-heading {
+#setup-birthdate .wrapper-form-heading,
+#setup-due-date .wrapper-form-heading {
   margin-bottom: 10vw;
   position: relative;
   padding: 0 10vw;
 }
 
-.wrapper-form-heading h3 {
+#setup-birthdate .wrapper-form-heading h3,
+#setup-due-date .wrapper-form-heading h3 {
   display: inline-block;
   font-size: $form-heading-font-size;
   color: $form-heading-color;
 }
 
-.wrapper-form-heading .button {
+#setup-birthdate .wrapper-form-heading .button,
+#setup-due-date .wrapper-form-heading .button {
+  @include button-styles;
   position: absolute;
   right: 10vw;
   font-size: $form-heading-font-size;
-  border: none;
-  background-color: $background-content;
-  color: $link-color;
   height: 100%;
 }
 
@@ -310,15 +311,17 @@ div.inside, div.outside {
   width: 7.5rem;
   height: 11rem;
 }
+
 #drum_month .inner {
-  top: 1rem;
-  height: 8.7rem;
+  @include select-inner;
 }
-#drum_month .container, #drum_month figure {
-  height: 2.1rem;
+
+#drum_month figure {
+  @include select-figure;
 }
+
 #drum_month .container {
-  top: 3.4rem;
+  @include select-container;
 }
 #drum_month figure {
   text-align: left;
@@ -329,52 +332,56 @@ div.inside, div.outside {
 /* select day styles */
 
 #drum_day {
-width: 2.2rem;
-height: 11rem;
+  width: 2.2rem;
+  height: 11rem;
 }
+
 #drum_day .inner {
-top: 1rem;
-height: 8.7rem;
+  @include select-inner;
 }
-#drum_day .container, #drum_day figure {
-height: 2.1rem;
-}
-#drum_day .container {
-top: 3.4rem;
-}
+
 #drum_day figure {
-text-align: center;
-font-size: 1.2rem;
-line-height: 1.4rem;
+  @include select-figure;
+}
+
+#drum_day .container {
+  @include select-container;
+}
+
+#drum_day figure {
+  text-align: center;
+  font-size: 1.2rem;
+  line-height: 1.4rem;
 }
 
 /* select year styles */
 
 #drum_year {
-width: 4rem;
-height: 11rem;
+  width: 4rem;
+  height: 11rem;
 }
 #drum_year .inner {
-top: 1rem;
-height: 8.7rem;
+  @include select-inner;
 }
-#drum_year .container, #drum_year figure {
-height: 2.1rem;
+
+#drum_year figure {
+  @include select-figure;
 }
+
 #drum_year .container {
-top: 3.4rem;
+  @include select-container;
 }
 #drum_year figure {
-text-align: right;
-font-size: 1.2rem;
-line-height: 1.4rem;
+  text-align: right;
+  font-size: 1.2rem;
+  line-height: 1.4rem;
 }
 
 //  end calendar styles
 
 // notification classes
 
-.wrapper-setup-birthdate .exclamation-mark {
+#setup-birthdate .exclamation-mark {
   width: 100%;
   height: 3rem;
   background-image: url(../img/exclamation-mark.png);
@@ -383,13 +390,13 @@ line-height: 1.4rem;
   background-position: center;
 }
 
-.wrapper-setup-birthdate .message {
+#setup-birthdate .message {
   font-size: 0.9rem;
   text-align: center;
   padding: 4vw 10vw;
 }
 
-.wrapper-setup-birthdate .message a {
+#setup-birthdate .message a {
   color: $link-color;
   text-decoration: none;
 }
@@ -1343,7 +1350,7 @@ line-height: 1.4rem;
     }
 
 
-  .wrapper-setup-birthdate .exclamation-mark {
+  #setup-birthdate .exclamation-mark {
     height: 4rem;
   }
 
