--- a/BabyNoggin/sass/style.scss
+++ b/BabyNoggin/sass/style.scss
@@ -403,13 +403,11 @@ div.inside, div.outside {
 
 // profile page styles
 
-.wrapper-profile-page .birthdate-wrapper {
-  position: relative;
-  min-height: 20vw;
-  border-bottom: 1px solid $border-color;
+#profile-page .birthdate-wrapper {
+  @include birthdate-wrapper;
 }
 
-.wrapper-profile-page .wrapper-tick-icon {
+#profile-page .wrapper-tick-icon {
   position: absolute;
   top: -9vw;
   left: 14vw;
@@ -420,7 +418,7 @@ div.inside, div.outside {
   height: 25vw;
 }
 
-.wrapper-profile-page .birthdate {
+#profile-page .birthdate {
     position: absolute;
     top: 2vw;
     right: 14vw;
@@ -429,17 +427,17 @@ div.inside, div.outside {
     line-height: 1.2rem;
 }
 
-.wrapper-profile-page .birthdate span {
+#profile-page .birthdate span {
     font-weight: bold;
 }
 
-.wrapper-profile-page .progress-link {
+#profile-page .progress-link {
     position: relative;
     min-height: 16.5vw;
     border-bottom: 1px solid $border-color;
 }
 
-.wrapper-profile-page .progress-link a {
+#profile-page .progress-link a {
     color: $link-color;
     position: absolute;
     bottom: 4vw;
@@ -448,19 +446,19 @@ div.inside, div.outside {
     text-align: center;
 }
 
-.wrapper-profile-page .milestone-wrapper {
+#profile-page .milestone-wrapper {
     position: relative;
     min-height: 25vw;
 }
 
-.wrapper-profile-page .milestone-wrapper h5 {
+#profile-page .milestone-wrapper h5 {
     text-align: center;
     font-size: 1rem;
     color: $text-color;
     margin: 4vw 0 1vw;
 }
 
-.wrapper-profile-page .milestone-wrapper a {
+#profile-page .milestone-wrapper a {
     position: absolute;
     width: 100%;
     text-align: center;
@@ -470,13 +468,11 @@ div.inside, div.outside {
 
 // profile-progress styles
 
-.wrapper-progress-page .birthdate-wrapper {
-    position: relative;
-    min-height: 20vw;
-    border-bottom: 1px solid $border-color;
+#profile-progress .birthdate-wrapper {
+    @include birthdate-wrapper;
   }
 
-.wrapper-progress-page .wrapper-daisy-icon {
+#profile-progress .wrapper-daisy-icon {
     position: absolute;
     top: -20vw;
     left: 5vw;
@@ -487,7 +483,7 @@ div.inside, div.outside {
     background-size: 100%;
   }
 
-.wrapper-progress-page .birthdate {
+#profile-progress .birthdate {
     position: absolute;
     top: 2vw;
     right: 9vw;
@@ -497,92 +493,89 @@ div.inside, div.outside {
     font-size: 0.9rem;
 }
 
-.wrapper-progress-page .birthdate span {
+#profile-progress .birthdate span {
   font-weight: bold;
 }
 
-.wrapper-progress-page .period-time {
+#profile-progress .period-time {
   display: flex;
   justify-content: space-between;
   padding: 5vw 5vw 0;
   font-size: 0.9rem;
 }
 
-.wrapper-progress-page .period-time span {
+#profile-progress .period-time span {
   color: #3ccfd4;
 }
 
-.wrapper-progress-page .period-time a {
+#profile-progress .period-time a {
   color: $text-color;
 }
 
-.wrapper-progress-page .period-time .active-link {
+#profile-progress .period-time .active-link {
     color: $link-color;
   }
 
-  .wrapper-progress-page .milestone-heading,
-  .wrapper-progress-page .vaccines-heading {
-    position: relative;
-    min-height: 13vw;
-    font-size: 0.9rem;
-  }
+#profile-progress .milestone-heading,
+#profile-progress .vaccines-heading {
+  position: relative;
+  min-height: 13vw;
+  font-size: 0.9rem;
+}
 
-  .wrapper-progress-page .milestone-heading h3,
-  .wrapper-progress-page .vaccines-heading h3 {
-    //font-size: 1rem;
-    text-transform: uppercase;
-    display: inline-block;
-    margin: 0;
-    position: absolute;
-    top: 4.5vw;
-    left: 5vw;
-    font-size: 0.9rem;
-  }
+#profile-progress .milestone-heading h3,
+#profile-progress .vaccines-heading h3 {
+  text-transform: uppercase;
+  display: inline-block;
+  margin: 0;
+  position: absolute;
+  top: 4.5vw;
+  left: 5vw;
+  font-size: 0.9rem;
+}
 
-.wrapper-progress-page .milestone-heading a,
-.wrapper-progress-page .vaccines-heading a {
+#profile-progress .milestone-heading a,
+#profile-progress .vaccines-heading a {
   position: absolute;
   top: 3.3vw;
   right: 5vw;
   color: $link-color;
 }
 
-.wrapper-progress-page .milestone-list {
-  //position: relative;
-}
 
-.wrapper-progress-page .milestone-list li,
-.wrapper-progress-page .vaccines-list li {
+#profile-progress .milestone-list li,
+#profile-progress .vaccines-list li {
   position: relative;
   min-height: 13vw;
   padding: 0 5vw;
 }
 
-.wrapper-progress-page .milestone-list li:nth-child(odd),
-.wrapper-progress-page .vaccines-list li:nth-child(odd) {
+#profile-progress .milestone-list li:nth-child(odd),
+#profile-progress .vaccines-list li:nth-child(odd) {
   background-color: #d6ecec;
 }
 
-.wrapper-progress-page li {
+#profile-progress li {
   background-repeat: no-repeat;
   background-position-x: 5vw;
   background-position-y: center;
   background-size: 5.5%;
 }
 
-.wrapper-progress-page .crossing-eyes {
+#profile-progress .crossing-eyes {
   background-image: url(../img/crossing-eyes-icon.png);
 }
 
-.wrapper-progress-page .covered-toy {
+#profile-progress .covered-toy {
   background-image: url(../img/eyes-icon.png);
 }
 
-.wrapper-progress-page .back-front {
+#profile-progress .back-front {
   background-image: url(../img/message-icon.png);
 }
 
-.wrapper-progress-page .milestone-list a {
+#profile-progress .milestone-list a,
+#profile-progress .vaccines-list a {
   position: absolute;
   top: 3vw;
   left: 12vw;
@@ -590,35 +583,35 @@ div.inside, div.outside {
   font-size: 0.9rem;
 }
 
-.wrapper-progress-page .vaccines-list a {
-  position: absolute;
-  top: 3vw;
-  left: 5vw;
-  color: $link-color;
-  font-size: 0.9rem;
+#profile-progress .vaccines-list li:last-child{
+  border-bottom: 1px solid $border-color;
 }
 
-.wrapper-progress-page .milestone-list span,
-.wrapper-progress-page .vaccines-list span {
+
+#profile-progress .vaccines-list a {
+  left: 5vw;
+}
+
+#profile-progress .milestone-list span,
+#profile-progress .vaccines-list span {
   position: absolute;
   right: 5vw;
   font-size: 1.5rem;
   color: $text-color;
 }
 
-.wrapper-progress-page .favorites-heading {
+#profile-progress .favorites-heading {
   position: relative;
   min-height: 13vw;
   font-size: 0.9rem;
 }
 
 //
-.wrapper-progress-page .favorites {
-  border-top: 1px solid $border-color;
+#profile-progress .favorites {
   margin-bottom: 15vw;
 }
 
-.wrapper-progress-page .favorites-heading h3 {
+#profile-progress .favorites-heading h3 {
   display: inline-block;
   position: absolute;
   top: 4.5vw;
@@ -627,14 +620,14 @@ div.inside, div.outside {
   color: #3ccfd4;
 }
 
-.wrapper-progress-page .favorites-heading a {
+#profile-progress .favorites-heading a {
   position: absolute;
   top: 3vw;
   right: 5vw;
   color: $link-color;
 }
 
-.wrapper-progress-page .favorites-list a {
+#profile-progress .favorites-list a {
   padding: 0 5vw;
   color: $link-color;
   font-size: 0.9rem;
@@ -1119,8 +1112,8 @@ div.inside, div.outside {
 
   // progress-page styles
 
-  .wrapper-progress-page .milestone-list a,
-  .wrapper-progress-page .vaccines-list a {
+  #profile-progress .milestone-list a,
+  #profile-progress .vaccines-list a {
     top: 2.6vw;
   }
 
@@ -1128,7 +1121,7 @@ div.inside, div.outside {
 
 @media (min-width: $xsmall) and (max-width:$xsmall-landscape - 1) and (orientation: landscape){
 
-  .wrapper-profile-page .tick {
+  #profile-page .tick {
     font-size: 3rem;
     padding-left: 2.2vw;
     line-height: 3.5rem;
@@ -1160,7 +1153,7 @@ div.inside, div.outside {
     height: 1.1rem;
 }
 
-  .wrapper-profile-page .tick {
+  #profile-page .tick {
     font-size: 3rem;
     padding-left: 2.2vw;
     line-height: 3.5rem;
@@ -1174,17 +1167,17 @@ div.inside, div.outside {
 
 // progress-page styles
 
-.wrapper-progress-page li {
+#profile-progress li {
   background-size: 4.5%;
 }
 
-.wrapper-progress-page .milestone-list a,
-.wrapper-progress-page .vaccines-list a {
+#profile-progress .milestone-list a,
+#profile-progress .vaccines-list a {
   top: 3.7vw;
 }
 
-.wrapper-progress-page .milestone-list span,
-.wrapper-progress-page .vaccines-list span {
+#profile-progress .milestone-list span,
+#profile-progress .vaccines-list span {
   top: 0.7vw;
 }
 
@@ -1222,11 +1215,11 @@ div.inside, div.outside {
 
   // profile page styles
 
-  .wrapper-profile-page .wrapper-tick-icon {
+  #profile-page .wrapper-tick-icon {
     padding: 1.5vw;
   }
 
-  .wrapper-profile-page .tick {
+  #profile-page .tick {
     font-size: 2.7rem;
     padding-left: 3vw;
     line-height: 3.5rem;
@@ -1284,11 +1277,11 @@ div.inside, div.outside {
 
   // profile page styles
 
-  .wrapper-profile-page .wrapper-tick-icon {
+  #profile-page .wrapper-tick-icon {
     padding: 1.5vw;
   }
 
-  .wrapper-profile-page .tick {
+  #profile-page .tick {
     font-size: 2.7rem;
     padding-left: 3vw;
     line-height: 3.5rem;
@@ -1296,17 +1289,17 @@ div.inside, div.outside {
 
 // progress-page styles
 
-.wrapper-progress-page li {
+#profile-progress li {
   background-size: 4.5%;
 }
 
-.wrapper-progress-page .milestone-list a,
-.wrapper-progress-page .vaccines-list a {
+#profile-progress .milestone-list a,
+#profile-progress .vaccines-list a {
   top: 3.3vw;
 }
 
-.wrapper-progress-page .milestone-list span,
-.wrapper-progress-page .vaccines-list span {
+#profile-progress .milestone-list span,
+#profile-progress .vaccines-list span {
   top: 0.5vw;
 }
 
@@ -1379,7 +1372,7 @@ div.inside, div.outside {
 
   // profile page styles
 
-  .wrapper-profile-page .tick {
+  #profile-page .tick {
     font-size: 4rem;
     padding-left: 2.5vw;
     line-height: 4.5rem;
@@ -1387,9 +1380,14 @@ div.inside, div.outside {
 
   // progress-page styles
 
-  .wrapper-progress-page .milestone-list a,
-  .wrapper-progress-page .vaccines-list a {
-    top: 3vw;
+  #profile-progress .milestone-list a,
+  #profile-progress .vaccines-list a {
+    top: 4vw;
+  }
+
+  #profile-progress .milestone-list span,
+  #profile-progress .vaccines-list span {
+    top: 2vw;
   }
 
   // baby-tracker styles
